# Rust_Resful_API

./: .gitignore  Cargo.toml  mod.rs  prelude.rs  todos.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260226_123709_create_users_table.rs
migrations/: 20260219160443_create_todos_table.sql
src/: main.rs  models.rs
src/database/: connection.rs
src/dto/: todo_dto.rs
src/entities/: mod.rs  prelude.rs  todos.rs  users.rs
src/handlers/: todo_handler.rs
src/models/: todo.rs
src/repository/: todo_repo.rs
src/routes/: router.rs
src/service/: todo_service.rs
